Removed unnecesary add module command line flag